# calc_cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: add_commit_info.py  build.yml
src/: main.cpp
src/include/: calc.hpp  function.hpp  info.hpp  tui.h  tui.hpp
src/module/: calc.cpp  function.cpp
